@@ -618,12 +618,10 @@ read_item_action_profile_properties( NAGConfProvider *provider, GSList *entries,
 	GSList *basenames, *schemes, *mimetypes;
 	gboolean isfile, isdir, multiple, matchcase;
 
-	if( !na_gconf_utils_get_string_from_entries( entries, ACTION_PROFILE_LABEL_ENTRY, &label )){
-		g_warning( "%s: no label found", thisfn );
-		label = g_strdup( "" );
+	if( na_gconf_utils_get_string_from_entries( entries, ACTION_PROFILE_LABEL_ENTRY, &label )){
+		na_object_set_label( profile, label );
+		g_free( label );
 	}
-	na_object_set_label( profile, label );
-	g_free( label );
 
 	if( na_gconf_utils_get_string_from_entries( entries, ACTION_PATH_ENTRY, &path )){
 		na_object_profile_set_path( profile, path );
@@ -633,6 +631,10 @@ read_item_action_profile_properties( NAGConfProvider *provider, GSList *entries,
 	if( na_gconf_utils_get_string_from_entries( entries, ACTION_PARAMETERS_ENTRY, &parameters )){
 		na_object_profile_set_parameters( profile, parameters );
 		g_free( parameters );
+	}
+
+	if(( !path || !g_utf8_strlen( path, -1 )) && ( !parameters || !g_utf8_strlen( parameters, -1 ))){
+		g_warning( "%s: no path nor parameters found for NAObjectProfile %p", thisfn, ( void * ) profile );
 	}
 
 	if( na_gconf_utils_get_string_list_from_entries( entries, ACTION_BASENAMES_ENTRY, &basenames )){
